added redis cache successfully